Fix width on SchoolInfoInputs component to right-align with rest of form

--- a/dashboard/app/assets/stylesheets/application.scss
+++ b/dashboard/app/assets/stylesheets/application.scss
@@ -1591,7 +1591,6 @@ a.download-video {
     #school-info-inputs {
       width: 100%;
       background-color: $school-info-background;
-      padding: 10px;
       border: 1px solid $school-info-border-color;
 
       h5 {
